Image stuff + prettier fixes

--- a/astro/src/pages/blog/adhd.mdx
+++ b/astro/src/pages/blog/adhd.mdx
@@ -8,6 +8,7 @@ tags:
   - mental-health
 layout: '../../layouts/Post.astro'
 ---
+
 import { Tweet } from '@astro-community/astro-embed-twitter'
 
 > I talk about suicide and depression in this post.
@@ -15,7 +16,7 @@ import { Tweet } from '@astro-community/astro-embed-twitter'
 # 1. The Beginning
 
 I was 6 years old, in first grade. My teacher told my mom that I couldn't sit still and was disruptive. My mom is
-a special educator and takes me to the doctor at which point I am diagnosed with  <abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr>
+a special educator and takes me to the doctor at which point I am diagnosed with <abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr>
 and put on Ritalin.
 
 > ADHD stands for attention deficit hyperactivity disorder. It is a medical condition. A person with ADHD has
@@ -39,7 +40,7 @@ a pick me up in the afternoon), before settling on Concerta (extended release an
 
 In middle school, I'm at Boy Scout camp. There is an older kid in my camp that has ADHD but he proudly proclaims that he
 went off medication and distraction is something that can be conquered with will power. He's a cool guy and
-I internalize that *my ADHD* can't be blamed for anything and that I need to power through it.
+I internalize that _my ADHD_ can't be blamed for anything and that I need to power through it.
 
 It goes on like this through high school. I'm told that I'm smart and put in the gifted classes but my GPA is always
 around 3.0. I get a computer when I'm 15 and it's off to the races. I could sit in front of that box for hours devouring
@@ -68,11 +69,13 @@ both. And this cycle repeats itself for 5 years! I was constantly employed that 
 money to survive, and flunking classes.
 
 <figure className="center">
-    ![Eli in 2011 with Aaron Draplin and some of my fellow interns](/img/adhd/2011-06-10-21.22.12.jpg)
-    <figcaption>
-        Me in 2011 at one of my internships. I got to meet <a href="https://twitter.com/Draplin">Aaron Draplin</a> and
-        work with some very nice and cool people in Cleveland.
-    </figcaption>
+  ![Eli in 2011 with Aaron Draplin and some of my fellow
+  interns](/img/adhd/2011-06-10-21.22.12.jpg)
+  <figcaption>
+    Me in 2011 at one of my internships. I got to meet{' '}
+    <a href="https://twitter.com/Draplin">Aaron Draplin</a> and work with some
+    very nice and cool people in Cleveland.
+  </figcaption>
 </figure>
 
 Along with being poor came bouts of food insecurity and homelessness. Those bouts were short but how have they stuck
@@ -86,11 +89,11 @@ beer and cigarettes. I have since noticed that when I was on them, I would drink
 I was off.
 
 <figure>
-    ![Eli in 2013](/img/adhd/2013-10-05-17.36.09.jpg)
-    <figcaption>
-        Me in 2013. All that smoking and ADHD medications kept me skinny, but my skin was trash and I can't excuse that
-        facial hair.
-    </figcaption>
+  ![Eli in 2013](/img/adhd/2013-10-05-17.36.09.jpg)
+  <figcaption>
+    Me in 2013. All that smoking and ADHD medications kept me skinny, but my
+    skin was trash and I can't excuse that facial hair.
+  </figcaption>
 </figure>
 
 After 4 years of this, **I hit my rock bottom**. I was working in a computer repair shop and sometimes going to classes
@@ -130,11 +133,11 @@ took that offer as it was much more than what I could make in Ohio and NYC is a 
 old than a college town. I quickly become one of the better engineers on the team and just thrive at that job.
 
 <figure>
-    ![Eli in 2017 with sunglasses](/img/adhd/IMG_0138.JPG)
-    <figcaption>
-        This is literally a selfie I took on the way to meet the person it looks like I'm going to marry in 2017! Living
-        in Brooklyn was a lot of fun.
-    </figcaption>
+  ![Eli in 2017 with sunglasses](/img/adhd/IMG_0138.JPG)
+  <figcaption>
+    This is literally a selfie I took on the way to meet the person it looks
+    like I'm going to marry in 2017! Living in Brooklyn was a lot of fun.
+  </figcaption>
 </figure>
 
 Mentally, I find a good therapist & psychiatrist and finally go off my ADHD medication. Going off that medication caused
@@ -143,10 +146,8 @@ me to gain some weight that I haven't gotten close to shedding, but hey, at leas
 I fall in love with someone special and we move in together in March 2020 and then... COVID happens 😂.
 
 <figure>
-    ![Eli and his partner at a wedding](/img/adhd/IMG_0352.PNG)
-    <figcaption>
-        How can I not love this dork?
-    </figcaption>
+  ![Eli and his partner at a wedding](/img/adhd/IMG_0352.PNG)
+  <figcaption>How can I not love this dork?</figcaption>
 </figure>
 
 COVID isn't all bad though. We adopt a cat and I get really good at cooking. You would thinking moving in together and
@@ -179,14 +180,14 @@ needing to have the conversation again.
 **Speed round time! 🏃‍♂️💨**
 
 - In order to fall asleep, your exterior body temperature needs to fall 10 degrees. [In people with ADHD, this
-    temperature falls much slower than people without][adhd-sleep-study]. This explains so many sleep issues!
+  temperature falls much slower than people without][adhd-sleep-study]. This explains so many sleep issues!
 - [Children with ADHD are 4x as likely to be rejected or disliked by their peers][adhd-peers]. This explains so much of
-    my childhood.
+  my childhood.
 - People with ADHD prioritize learning over accomplishments. This is why I guess I don't care much about the rat race
-    but love to read full Wikipedia articles on a whim.
+  but love to read full Wikipedia articles on a whim.
 - We hear hums and ambient noises much louder than neurotypical people do. I can hear TVs when they are off and get
-    annoyed when the bottles on the top of the fridge are not just so and clink around when we walk around the
-    apartment.
+  annoyed when the bottles on the top of the fridge are not just so and clink around when we walk around the
+  apartment.
 - I cannot touch velvet, it makes me cringe and it hurts. Turns out, this sensory aversion is also an ADHD symptom.
 
 **This was a lot of information for me to ingest**. A lot of my life started making a lot more sense. I have
@@ -201,8 +202,8 @@ component!? I don't like this, everything is a lie!
 
 Through all this, I'm coming to acceptance of the fact that I have a lot of internalized ableism. I'm going to fumble
 through this and expose some of my ugliness, but to me, people with disabilities were "others" to be pitied and cared
-for. Well, maybe not that extreme, but something close to that. *They couldn't be like me. No, I'm functional, I like to
-run around, I'm not disabled.* **This is all a lie when looking at the facts**. I very much have a disability and it's
+for. Well, maybe not that extreme, but something close to that. _They couldn't be like me. No, I'm functional, I like to
+run around, I'm not disabled._ **This is all a lie when looking at the facts**. I very much have a disability and it's
 effected every aspect of my life, just like so many others, whether I've recognized it or not. The respect and pride
 I have in myself is the same as how other people with disabilities feel and want to be treated. This was a big pill
 for me to swallow and I still feel guilt about how I thought.
@@ -215,7 +216,7 @@ and pose a very simple question:
 > "Is this actually effecting you? Is your ADHD negatively impacting you in this moment?"
 
 Initially, I felt this question was pretty dismissive and a little disrespectful. But it makes a lot of sense in the
-context of  <abbr title="Cognitive Behavioral Therapy">CBT</abbr>. Over thinking and over analyzing and over
+context of <abbr title="Cognitive Behavioral Therapy">CBT</abbr>. Over thinking and over analyzing and over
 contextualizing the past is only really beneficial if we are doing so to address the present. So, to answer the
 question, my present is going pretty good, there are some stuff to be learned from the past that can make my present
 even better, but to dwell on it with this new information doesn't allow me to change it in the least.
