--- a/astro/src/pages/blog/cooking-strawberry-pretzel-pie-spiked-cucumber-soup.mdx
+++ b/astro/src/pages/blog/cooking-strawberry-pretzel-pie-spiked-cucumber-soup.mdx
@@ -1,5 +1,5 @@
 ---
-title: "👨‍🍳 Strawberry Pretzel Pie & Spiked Cucumber Soup"
+title: '👨‍🍳 Strawberry Pretzel Pie & Spiked Cucumber Soup'
 description: Trying my hand at "lifestyle blogging" with some cooking I did for a warm summer day.
 date: 2021-06-07T04:00
 slug: cooking-strawberry-pretzel-pie-spiked-cucumber-soup
@@ -21,7 +21,7 @@ and execute some non-dinner meals. Let's make some desert and a cocktail that co
 
 I made this pie last year and it's the perfect summer pie. First I blended up a bunch of pretzels to make the crust.
 Then I combined the pretzel with some half melted butter and sugar and lay it out in my cast iron pie pan. They say to
-use a stand mixer, but all I have are my 🙌  so they had to do. Bake it and let it cool in the fridge for a bit.
+use a stand mixer, but all I have are my 🙌 so they had to do. Bake it and let it cool in the fridge for a bit.
 
 ![Making the crust in 3 steps](/img/cooking-strawberry-pie-cucumber-soup/making-the-crust.jpg)
 
