--- a/astro/src/pages/blog/cooking-veggie-burgers-and-more.mdx
+++ b/astro/src/pages/blog/cooking-veggie-burgers-and-more.mdx
@@ -1,5 +1,5 @@
 ---
-title: "👨‍🍳 Veggie Burgers & More"
+title: '👨‍🍳 Veggie Burgers & More'
 description: I'm not even a vegetarian but I love making these veggie burgers
 date: 2021-07-19T04:00
 slug: cooking-veggie-burgers-and-more
@@ -88,7 +88,7 @@ The New York Times Cooking section has this recipe for a French beer cocktail th
 a mixture of beer, Amaro, and orange liqueur. All those ingredients are somewhat fancy so I've dumbed it down for my
 palette. I obviously have Amaro, so I'm not that dumb. I have no idea if triple sec is orange liqueur, but the bottle
 has oranges on it so I'm going with it. And for the beer, I am using my beloved Miller High Life. Since this is
-a French cocktail, and High Life is the Champagne of Bottled Beers™️  and Champagne only comes from the Champagne region
+a French cocktail, and High Life is the Champagne of Bottled Beers™️ and Champagne only comes from the Champagne region
 of France, this is the perfect combo.
 
 Overall, it's a great summer cocktail that's perfect for a Sunday, 5 bags of popcorn.
