--- a/astro/src/pages/blog/feelings-api.mdx
+++ b/astro/src/pages/blog/feelings-api.mdx
@@ -1,6 +1,6 @@
 ---
 title: I made an API for my feelings
-description: "What happens when I open myself up as a programming interface?"
+description: 'What happens when I open myself up as a programming interface?'
 date: 2020-02-24T05:00
 slug: feelings-api
 tags:
