--- a/astro/src/pages/blog/funny-money.mdx
+++ b/astro/src/pages/blog/funny-money.mdx
@@ -8,6 +8,7 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
+
 import { Tweet } from '@astro-community/astro-embed-twitter'
 
 This is a post about cryptocurrency, but first, let me tell you a tale.
@@ -61,7 +62,14 @@ ask why?
 >
 > Him: Yes, but that isn't a good first pass at collecting. Gotta work up to that.
 
-<iframe src="https://giphy.com/embed/xfQk67w5fRRx6" width="480" height="360" frameBorder="0" className="giphy-embed" allowFullScreen></iframe>
+<iframe
+  src="https://giphy.com/embed/xfQk67w5fRRx6"
+  width="480"
+  height="360"
+  frameBorder="0"
+  className="giphy-embed"
+  allowFullScreen
+></iframe>
 
 As I went to leave, he hits me with $100 and a wink. You know now that this is now dead ass serious, but like all things
 when I was young, I didn't learn. **But hey, that's $100 I didn't have before, again, no issues here.**
@@ -153,13 +161,15 @@ money, they are allowed to gamble as they see fit, right?
 
 **The other superpower crypto has is being perfect for criminals.** Let's play the hits!
 
-* Crypto is perfect for collecting payment in ransomware attacks against [hospitals][hospital-ransomware] and
+- Crypto is perfect for collecting payment in ransomware attacks against [hospitals][hospital-ransomware] and
   [municipal governments][baltimore-ransomware]. [You can track the rise of these attacks against the prevalence of crypto][npr-ransomware].
-* <abbr title="Non Fungible Tokens">NFTs</abbr> replicate the worst elements of the art world being a tax haven EXCEPT
-  it's far easier to commit fraud. You mint an NFT for $1k, sell it to yourself for $2k using another wallet, flip it to
-  yourself a couple of more times til you can sell it to a mark for $8k, clearing $7k. It should also be noted that NFTs
-  are ugly as shit and a capitalist's vision of what art is.
-* Rug pulling/pumping and dumping is a concept that all crypto bros have accepted as a part of life.
+- <abbr title="Non Fungible Tokens">NFTs</abbr> replicate the worst elements of the
+  art world being a tax haven EXCEPT it's far easier to commit fraud. You mint an
+  NFT for $1k, sell it to yourself for $2k using another wallet, flip it to yourself
+  a couple of more times til you can sell it to a mark for $8k, clearing $7k. It
+  should also be noted that NFTs are ugly as shit and a capitalist's vision of what
+  art is.
+- Rug pulling/pumping and dumping is a concept that all crypto bros have accepted as a part of life.
   You launch a coin or NFT or <abbr title="Decentralized Autonomous Organization">DAO</abbr>, raise a bunch of funds by
   getting influencers post about it on their story and then take off with the money and disappear.
 
