--- a/astro/src/pages/blog/google-page-speed-shield.mdx
+++ b/astro/src/pages/blog/google-page-speed-shield.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Blogging My Failures: Google Page Speed Insights Shield"
+title: 'Blogging My Failures: Google Page Speed Insights Shield'
 description: I wanted Google Page Speed Insights to work with GitHub badges, but latency stays undefeated.
 slug: google-page-speed-shield
 cover: /img/page-speed-shield/cover.png
@@ -11,7 +11,7 @@ layout: '../../layouts/Post.astro'
 
 As a software engineer, it's rare to have an idea for a personal project and actually finish it. We have ideas all the
 time, buy domains for them, and then never finish them. For me, I've had a brain block for coding that isn't work for
-like 5 years. *Well, maybe* that isn't completely true, but for the purposes of this post, let's just roll with it.
+like 5 years. _Well, maybe_ that isn't completely true, but for the purposes of this post, let's just roll with it.
 
 At work, I've been working a lot with Gatsby on a new site. One of our big metrics that we are tracking with this new
 site we are building is [Google Page Speed Insights](https://developers.google.com/speed/pagespeed/insights/). For those that don't know, Page Speed
