--- a/astro/src/pages/blog/hackathons-all-the-time.mdx
+++ b/astro/src/pages/blog/hackathons-all-the-time.mdx
@@ -28,7 +28,9 @@ doing it with such ease.
 
 <figure className="pull-right">
   ![Nerf Gun Turret](/img/hackathons/nerf-gun-turret.png)
-  <figcaption>They fired this bad boy at judges. It was a sight to behold.</figcaption>
+  <figcaption>
+    They fired this bad boy at judges. It was a sight to behold.
+  </figcaption>
 </figure>
 
 This lead me to an amazing discovery: **planning leads to success at
@@ -52,9 +54,9 @@ with that. The hackathon is a puzzle: Show up with all the pieces.
 I hate business planning "hackathons" (I'm looking at you, [Startup
 Weekend](http://startupweekend.org/)). These "hackathons" are all about:
 
-* Creating a viable business plan
-* Making charts about target markets
-* Preparing a pitch deck to woo potential investors
+- Creating a viable business plan
+- Making charts about target markets
+- Preparing a pitch deck to woo potential investors
 
 Note how none of these sound like fun (at least not to me). Code isn't
 a part of it and it really pares down the ideas that you're free to implement
@@ -102,6 +104,6 @@ events, go to one. I'll probably be attending [Hack PSU](http://www.hackpsu.com/
 in a few weeks. Hopefully, I'll see you there.
 
 <figure className="center">
-    ![HacKSU at Penn Apps 2014](/img/hackathons/hacksu_at_penn_apps.jpg)
-    <figcaption>HacKSU at Penn Apps 2014</figcaption>
+  ![HacKSU at Penn Apps 2014](/img/hackathons/hacksu_at_penn_apps.jpg)
+  <figcaption>HacKSU at Penn Apps 2014</figcaption>
 </figure>
