--- a/astro/src/pages/blog/icymi-beauty-and-the-beat.mdx
+++ b/astro/src/pages/blog/icymi-beauty-and-the-beat.mdx
@@ -1,5 +1,5 @@
 ---
-title: "ICYMI: Edan - Beauty & The Beat"
+title: 'ICYMI: Edan - Beauty & The Beat'
 date: 2017-01-27T05:00
 description: Underground rap record that will rock you.
 cover: /img/icymi/beauty-and-the-beat.jpg
@@ -18,7 +18,7 @@ helps.
 
 > Does this mic sound blurry?
 
-The album is [Edan's *Beauty & The Beat*](https://open.spotify.com/album/0E5nyAi6rLhzfrsOxYedX3). This album is basically
+The album is [Edan's _Beauty & The Beat_](https://open.spotify.com/album/0E5nyAi6rLhzfrsOxYedX3). This album is basically
 underground hip hop that sounds like it's backed by a late 60s guitar heavy rock
 band that's been tripping for 3 years straight. I'm a huge fan of both of those
 genres, so this is like a special treat for me.
@@ -30,7 +30,7 @@ genres, so this is like a special treat for me.
 > Best dash, leave and lit your head, when I spit it's said like you're being hit with lead
 
 The first thing that you will notice about how silly and psychedelic this album
-sounds. The instrumentals are  bright, the drums feel real, and they have some
+sounds. The instrumentals are bright, the drums feel real, and they have some
 real progressions. I can honestly say that no one else has beats like this.
 
 > The martyr was light-skinned with chartered indictments that started in high school
@@ -77,9 +77,9 @@ this album just hits this sweet spot for me that not many other albums do. It's
 aggressive without being intimidating, bright and dark at the same time, and
 doesn't overstay it's welcome. Check it out.
 
-* Must Listens: *Funky Voltron*, *Making Planets*, *Rock And Roll*, *Fumbling
-  Over Words The Rhyme*
-* Rating: 5 Marshall Amplifiers, 2 turntables, and a microphone
+- Must Listens: _Funky Voltron_, _Making Planets_, _Rock And Roll_, _Fumbling
+  Over Words The Rhyme_
+- Rating: 5 Marshall Amplifiers, 2 turntables, and a microphone
 
 [1]: /img/icymi/beauty-and-the-beat.jpg
 [2]: https://open.spotify.com/album/0E5nyAi6rLhzfrsOxYedX3
