--- a/astro/src/pages/blog/icymi-glocca-morra-just-married.mdx
+++ b/astro/src/pages/blog/icymi-glocca-morra-just-married.mdx
@@ -1,5 +1,5 @@
 ---
-title: "ICYMI: Glocca Morra - Just Married"
+title: 'ICYMI: Glocca Morra - Just Married'
 date: 2021-11-15T04:00
 description: Classic emo album about the first year of marriage. Also, a quick primer on emo music.
 cover: /img/icymi/just-married.jpeg
@@ -8,6 +8,7 @@ tags:
   - icymi
 layout: '../../layouts/Post.astro'
 ---
+
 import { YouTube } from '@astro-community/astro-embed-youtube'
 
 <StreamingAlbum
@@ -133,12 +134,12 @@ none of them are as long or cohesive as _Just Married_.
 
 If you find this album interesting, let me recommend the following albums:
 
-* [Algernon Cadwallader's _Some Kind of Cadwallader_][cadwallader] - The pinnacle of the Philly emo revival scene, might
+- [Algernon Cadwallader's _Some Kind of Cadwallader_][cadwallader] - The pinnacle of the Philly emo revival scene, might
   be better than _Just Married_, depending on my mood that day.
-* [Hop Along's _Bark Your Head Off, Dog_][hop-along] - Also from Philly and has a shouty lady singer with an amazing
+- [Hop Along's _Bark Your Head Off, Dog_][hop-along] - Also from Philly and has a shouty lady singer with an amazing
   voice.
-* [Chalk Talk's _Bad Influences_][chalk-talk] - A very short EP and I describe as "Vampire Weekend ass sounding emo".
-* [Owen's _The Avalanche_][owen] - An acoustic emo album about divorce and the death of a parent.
+- [Chalk Talk's _Bad Influences_][chalk-talk] - A very short EP and I describe as "Vampire Weekend ass sounding emo".
+- [Owen's _The Avalanche_][owen] - An acoustic emo album about divorce and the death of a parent.
 
 **Review**: 🌟🌟🌟🌟🌟
 
