--- a/astro/src/pages/blog/icymi-moodymann.mdx
+++ b/astro/src/pages/blog/icymi-moodymann.mdx
@@ -1,5 +1,5 @@
 ---
-title: "ICYMI: Moodymann - Moodymann"
+title: 'ICYMI: Moodymann - Moodymann'
 date: 2016-12-02T05:00
 description: A catchy mix of Motown and house music.
 cover: /img/icymi/moodymann.jpg
@@ -20,9 +20,9 @@ women.
 <!-- excerpt -->
 
 What really makes this album special is Dixion's voice: All the songs are sung in almost a whisper, but with the music
-around it, it makes complete sense. The album ends with his 11 minute remix of Funkadelic's *Cosmic Slop*. More
+around it, it makes complete sense. The album ends with his 11 minute remix of Funkadelic's _Cosmic Slop_. More
 suprisingly, there's a goddamn remix of a Lana Del Ray song that acutally works and fits into the album perfectly. Also,
-throughout the album, he keeps playing little snippets of this song, *Freeki Muthafucka*, and when it comes on you'll
+throughout the album, he keeps playing little snippets of this song, _Freeki Muthafucka_, and when it comes on you'll
 understand exactly why he did this and that it's the only way to introduce this song.
 
 That said, this album does have some skippable songs in the middle, but for the most part, this album is perfect for me.
