--- a/astro/src/pages/blog/icymi-quarantine.mdx
+++ b/astro/src/pages/blog/icymi-quarantine.mdx
@@ -1,5 +1,5 @@
 ---
-title: "ICYMI: Laurel Halo - Quarantine"
+title: 'ICYMI: Laurel Halo - Quarantine'
 date: 2016-12-09T05:00
 description: A beautiful ambient album about the pain of a breakup.
 cover: /img/icymi/quarantine.jpg
@@ -11,7 +11,7 @@ layout: '../../layouts/Post.astro'
 
 I'm gonna veer off my normal course of grooveable music into something a little
 more personal. This week, I'm gonna suggest that people check out my favorite
-ambient album ever, [Laurel Halo's *Quarantine*](https://open.spotify.com/album/5XARRzHIiZ3SyXEQEaWQ32).
+ambient album ever, [Laurel Halo's _Quarantine_](https://open.spotify.com/album/5XARRzHIiZ3SyXEQEaWQ32).
 
 Halo is an artist that is currently on Hyperdub. She usually makes typical
 Hyperdub fair, which is like somewhat dark and minimal dance music. But, on this
@@ -31,7 +31,7 @@ vocals are ugly and can be a little uncomfortable to listen to.
 <!-- excerpt -->
 
 But holy shit is it worth it because you get the album's highlight next, which
-is *Thaw*. The beat is super simple with a lot of static around it for about two
+is _Thaw_. The beat is super simple with a lot of static around it for about two
 minutes and then her voice kicks in. I don't really know how to describe it, but
 she's harmonizing with about 5 different pitches of her voice at points. This is
 the personal narrative that she has to tell herself to get through the break up.
