--- a/astro/src/pages/blog/icymi-the-monitor.mdx
+++ b/astro/src/pages/blog/icymi-the-monitor.mdx
@@ -1,5 +1,5 @@
 ---
-title: "ICYMI: Titus Andronicus - The Monitor"
+title: 'ICYMI: Titus Andronicus - The Monitor'
 date: 2017-01-20T05:00
 description: Epic punk album about anxiety and fighting the man.
 cover: /img/icymi/the-monitor.jpg
@@ -12,7 +12,7 @@ layout: '../../layouts/Post.astro'
 ![The Monitor](/img/icymi/the-monitor.jpg)
 
 To honor the inauguration today, I'm going to talk about one of my favorite punk
-albums of all time, [Titus Andronicus's *The Monitor*](https://open.spotify.com/album/5U09FQWagzAU5HPmufUAlU). This album is sort of
+albums of all time, [Titus Andronicus's _The Monitor_](https://open.spotify.com/album/5U09FQWagzAU5HPmufUAlU). This album is sort of
 a concept album framed around the Civil War juxtaposed around a break up and
 modern general anxiety.
 
@@ -20,7 +20,7 @@ Sonically, this album sounds awesome. The guitars are loud, but never overpower
 the vocals and the riffs will remind you of Bruce Springsteen meets Civil War
 marches meets traditional punk rock. This album will make you want to overtake
 the means of production cause it rocks so hard. There are also softer songs,
-like *To Old Friends And New*, which feels like a punk rock power ballad.
+like _To Old Friends And New_, which feels like a punk rock power ballad.
 
 > So give me a Guinness, give me a Keystone Light
 >
@@ -52,9 +52,9 @@ reference followed by a Rakim quote in the first verse).
 > But no one seems to worried or care
 
 My favorite part of this album involves the lyrics above. They first appear on
-*Titus Andronicus Forever*, which is the second song, and it seems like
+_Titus Andronicus Forever_, which is the second song, and it seems like
 a throwaway punk song with a simple chorus. Then, a bunch of long sad songs
-happen, and out of nowhere, this chorus repeats itself on *...And Ever* with
+happen, and out of nowhere, this chorus repeats itself on _...And Ever_ with
 added Springsteen-ish saxophone.
 
 > This is a war we can't win
@@ -71,8 +71,8 @@ with the government being run by people that are simultaneously corrupt and
 incompetent. Yeah, get angry, listen to this album, and prepare for the war we
 are about to fight.
 
-* Standout Songs: *A More Perfect Union*, *Theme From "Cheers"*, *Four Score And Seven*, *...And Ever*
-* Rating: 4 pieces of hardtack, some salted meats, and a handle of rye.
+- Standout Songs: _A More Perfect Union_, _Theme From "Cheers"_, _Four Score And Seven_, _...And Ever_
+- Rating: 4 pieces of hardtack, some salted meats, and a handle of rye.
 
 [1]: https://open.spotify.com/album/5U09FQWagzAU5HPmufUAlU
 [2]: https://genius.com/albums/Titus-andronicus/The-monitor
