--- a/astro/src/pages/blog/job-search-2k22.mdx
+++ b/astro/src/pages/blog/job-search-2k22.mdx
@@ -24,10 +24,10 @@ search in 2017.
 
 Let's take a quick at conversion rates compared to 2017:
 
-* Application → callback rate was 75% in 2022 vs 35% in 2017
-* Application → code test rate was 40% in 2022 vs 9% in 2017
-* Application → on site rate was 27% in 2022 vs 6% in 2017
-* Application → offer rate was 19% in 2022 vs 1% in 2017
+- Application → callback rate was 75% in 2022 vs 35% in 2017
+- Application → code test rate was 40% in 2022 vs 9% in 2017
+- Application → on site rate was 27% in 2022 vs 6% in 2017
+- Application → offer rate was 19% in 2022 vs 1% in 2017
 
 The numbers don't tell the full story here either! The later stage numbers here are weighed down by the fact that I was
 able to drop out of processes later on if I wasn't getting good vibes from the company. That freedom alone allowed me to
