--- a/astro/src/pages/blog/what-i-learned-working-at-my-first-startup.mdx
+++ b/astro/src/pages/blog/what-i-learned-working-at-my-first-startup.mdx
@@ -49,7 +49,14 @@ Here are some cool tech patterns I learned around this:
 It goes without saying, but I will say it because it's important: **I am going to miss working with these people so
 much. I will never forget your kindness and understanding.**
 
-<iframe src="https://giphy.com/embed/ALQnCUBuggPxS" width="480" height="270" frameBorder="0" className="giphy-embed center" allowFullScreen></iframe>
+<iframe
+  src="https://giphy.com/embed/ALQnCUBuggPxS"
+  width="480"
+  height="270"
+  frameBorder="0"
+  className="giphy-embed center"
+  allowFullScreen
+></iframe>
 
 ## So Many Data Pipelines
 
@@ -69,8 +76,8 @@ I ever start a company, it will be all Lambdas). **If you drop events, you're dr
 I'm ashamed to say that I never ran an A/B test before my time at Talent. It's just not a concern for early stage
 consulting gigs. That changed very quickly for me and now I can't go back. We used A/B tests for everything:
 
-* You want to see which version will make more money? **Split test and let revenue tell the truth.**
-* You have a feature that's a little raw that you want help debugging? **Hide it behind a feature flag and watch Sentry,
+- You want to see which version will make more money? **Split test and let revenue tell the truth.**
+- You have a feature that's a little raw that you want help debugging? **Hide it behind a feature flag and watch Sentry,
   the users will test if for you.**
 
 That said, there were certainly times that instrumenting an A/B test was annoying and I wished that I didn't need to,
@@ -120,6 +127,9 @@ so hard I burnout once a year". I should probably work on that… I'm going to t
 habits and doing a thorough job search next year.
 
 <figure>
-  ![Me & a coworker in a marketing photo looking at an empty notebook](/img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg)
-  <figcaption>You never know when you're going to show up on the marketing website…</figcaption>
+  ![Me & a coworker in a marketing photo looking at an empty
+  notebook](/img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg)
+  <figcaption>
+    You never know when you're going to show up on the marketing website…
+  </figcaption>
 </figure>
