--- a/astro/src/pages/blog/2021-website-redesign.mdx
+++ b/astro/src/pages/blog/2021-website-redesign.mdx
@@ -7,6 +7,7 @@ tags:
   - code
 layout: '../../layouts/Post.astro'
 ---
+
 import { Tweet } from '@astro-community/astro-embed-twitter'
 
 ![Home page screenshot](/img/website-update/home-page.png)
@@ -17,7 +18,16 @@ make on your own, but there is something extremely satisfying in owning every pi
 I saw this Tweet the other day and it seemed fitting to how I think about personal sites.
 
 <Tweet id="1456360721084674098">
-  <blockquote><p lang="en" dir="ltr">trying this analogy thing <a href="https://t.co/Q9889HOF3B">pic.twitter.com/Q9889HOF3B</a></p>&mdash; Jane Manchun Wong (@wongmjane) <a href="https://twitter.com/wongmjane/status/1456360721084674098?ref_src=twsrc%5Etfw">November 4, 2021</a></blockquote>
+  <blockquote>
+    <p lang="en" dir="ltr">
+      trying this analogy thing{' '}
+      <a href="https://t.co/Q9889HOF3B">pic.twitter.com/Q9889HOF3B</a>
+    </p>
+    &mdash; Jane Manchun Wong (@wongmjane){' '}
+    <a href="https://twitter.com/wongmjane/status/1456360721084674098?ref_src=twsrc%5Etfw">
+      November 4, 2021
+    </a>
+  </blockquote>
 </Tweet>
 
 If we are entering the era of Web3 (which is Soylent in this Tweet, ewww) and it's ethos is trying to revive the
@@ -90,9 +100,9 @@ Gatsby for now.
 
 That said, there are a lot of things that Gatsby does right:
 
-* It's plugin ecosystem is massive and will save you a lot of time from the jump
-* The [image component][gatsby-plugin-image] is extremely good, far better than Next.js's
-* The documentation is fantastic
+- It's plugin ecosystem is massive and will save you a lot of time from the jump
+- The [image component][gatsby-plugin-image] is extremely good, far better than Next.js's
+- The documentation is fantastic
 
 ## Other Technologies
 
@@ -232,7 +242,30 @@ After cribbing the template for this site, I was feeling good about the design, 
 really show off my personality. It took me a few weeks and some endless scrolling on Twitter before I came across this:
 
 <Tweet id="1455150458352381963">
-  <blockquote><p lang="en" dir="ltr">New Houdini stuff! ✨<br /><br />Magical generative patterns that rearrange themselves based on the browser window 🎨<br /><br />A kinda different approach for responsive design...<br /><br />Inspired by <a href="https://twitter.com/chriscoyier?ref_src=twsrc%5Etfw">@chriscoyier</a> &#39;s generative grids pen 💛<br /><br />CodePen (Desktop only + Chrome / Edge) <a href="https://t.co/WvYqXy3Yoq">https://t.co/WvYqXy3Yoq</a> <a href="https://t.co/6kJCifGdbB">pic.twitter.com/6kJCifGdbB</a></p>&mdash; George Francis (@georgedoescode) <a href="https://twitter.com/georgedoescode/status/1455150458352381963?ref_src=twsrc%5Etfw">November 1, 2021</a></blockquote>
+  <blockquote>
+    <p lang="en" dir="ltr">
+      New Houdini stuff! ✨<br />
+      <br />
+      Magical generative patterns that rearrange themselves based on the browser
+      window 🎨
+      <br />
+      <br />A kinda different approach for responsive design...
+      <br />
+      <br />
+      Inspired by <a href="https://twitter.com/chriscoyier?ref_src=twsrc%5Etfw">
+        @chriscoyier
+      </a> &#39;s generative grids pen 💛
+      <br />
+      <br />
+      CodePen (Desktop only + Chrome / Edge){' '}
+      <a href="https://t.co/WvYqXy3Yoq">https://t.co/WvYqXy3Yoq</a>{' '}
+      <a href="https://t.co/6kJCifGdbB">pic.twitter.com/6kJCifGdbB</a>
+    </p>
+    &mdash; George Francis (@georgedoescode){' '}
+    <a href="https://twitter.com/georgedoescode/status/1455150458352381963?ref_src=twsrc%5Etfw">
+      November 1, 2021
+    </a>
+  </blockquote>
 </Tweet>
 
 This only works natively in Chrome + Edge, but I have been able to polyfill it so it works in Safari + Firefox, thought
@@ -248,8 +281,7 @@ mode toggle, speaking of which...
 
 You have to be sensitive to users that like dark color schemes! Luckily, [TailwindCSS makes it very easy to style your
 site for dark mode][tailwindcss-dark-mode]. With that approach, I made a React provider that provides the ability to the
-user to toggle light to dark mode with it's default value being the result of the media query `(prefers-color-scheme:
-dark)`, which the OS sets in MacOS and probably Windows.
+user to toggle light to dark mode with it's default value being the result of the media query `(prefers-color-scheme: dark)`, which the OS sets in MacOS and probably Windows.
 
 # Github Integrations
 
