--- a/astro/src/pages/blog/icymi-live-in-concert-ep.mdx
+++ b/astro/src/pages/blog/icymi-live-in-concert-ep.mdx
@@ -1,5 +1,5 @@
 ---
-title: "ICYMI: Wiz Khalifa & Curren$y - Live In Concert EP"
+title: 'ICYMI: Wiz Khalifa & Curren$y - Live In Concert EP'
 date: 2016-11-18T05:00
 description: Weed rap meets classic jazz flute with fun results.
 cover: /img/icymi/live-in-concert.jpg
@@ -12,8 +12,8 @@ layout: '../../layouts/Post.astro'
 ![Wiz Khalifa & Curren$y - Live In Concert EP](/img/icymi/live-in-concert.jpg)
 
 This week, I'm gonna take us back to 2013. Happier times for sure. The album is
-[*Live in Concert EP* from Wiz Khalifa and Curren$y][1]. Don't be mislead, this
-is not a  live album, rather them doing their thing over jazz flutist [Bobbi Humphrey's album 1975 album *Fancy Dancer*][2].
+[_Live in Concert EP_ from Wiz Khalifa and Curren$y][1]. Don't be mislead, this
+is not a live album, rather them doing their thing over jazz flutist [Bobbi Humphrey's album 1975 album _Fancy Dancer_][2].
 While this isn't anybody's best album (Curren$y's best is [*Pilot Talk*][3],
 Wiz's best is [*Kush & OJ*][4], and Humphry's is [*Blacks & Blues*][5]), but
 this works great. The instrumentals are lush and engaging, the raps are about
